// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`astDag can use a taxonomy (recursive patterns) 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix sh: <http://www.w3.org/ns/shacl#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
@prefix purl: <http://purl.org/dc/terms/> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b19 a mark:Root ;
	mark:contains [
		mark:contains [
			mark:contains [
				mark:contains [
					mark:header \\"#### Tomato\\" ;
					mark:text \\"A tomato most of the time is red in Europe\\" ;
				] ;
				mark:header \\"### Red\\" ;
			], [
				mark:header \\"### Green\\" ;
				mark:text \\"- Lettuce\\" ;
			] ;
			mark:header \\"## Food\\" ;
		], [
			mark:contains [
				mark:header \\"### Metal\\" ;
				mark:text \\"* Screwdriver\\", \\"* Hammer\\" ;
			], [
				mark:header \\"### Wood\\" ;
				mark:text \\"- 1\\", \\"- 2\\", \\"- 3\\" ;
			] ;
			mark:header \\"## Tools\\" ;
		] ;
		mark:header \\"# Things\\" ;
	] .

"
`;

exports[`astDag produces quads using embedded tag 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix sh: <http://www.w3.org/ns/shacl#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
@prefix purl: <http://purl.org/dc/terms/> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b1 a mark:Root ;
	mark:contains [
		mark:contains [
			mark:contains [
				mark:header \\"### Who\\" ;
				mark:text \\"- Bob (action::prepare)\\", \\"- Alice (action::cook)\\" ;
			], [
				mark:header \\"### Purpose\\" ;
				mark:text \\"To make the best Pancakes in the world\\" ;
			], [
				mark:contains [
					mark:header \\"#### Embedded\\" ;
				] ;
				mark:header \\"### Song\\" ;
				mark:text \\"Pancakes, Pancakes !\\" ;
			], [
				mark:header \\"### Tasks\\" ;
				mark:text \\"- Mix ingredients\\", \\"- Heat the pan\\", \\"- Prepare the Pancakes\\", \\"And a paragraph, explaining even more things\\" ;
			] ;
			mark:header \\"## Pancake maker #role\\" ;
			mark:text \\"Some text for the Pancake maker\\" ;
			mark:tag \\"#role\\" ;
		], [
			mark:contains [
				mark:header \\"### Who\\" ;
				mark:text \\"- Charlie\\" ;
			], [
				mark:header \\"### Purpose\\" ;
				mark:text \\"Sell the Pancakes to the customers\\" ;
			], [
				mark:contains [
					mark:header \\"# Some other topic\\" ;
					mark:text \\"With a description\\" ;
				] ;
				mark:header \\"### Tasks\\" ;
				mark:text \\"- Coordination of Pancake economic activities\\", \\"- Advertise the Pancakes\\" ;
			] ;
			mark:header \\"## Pancake seller #role\\" ;
			mark:tag \\"#role\\" ;
		] ;
		mark:header \\"# Roles\\" ;
		mark:text \\"The roles are the following: \\" ;
	] .

"
`;

exports[`astDag produces quads using lists 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix sh: <http://www.w3.org/ns/shacl#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix foaf: <http://xmlns.com/foaf/0.1/> .
@prefix purl: <http://purl.org/dc/terms/> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b14 a mark:Root ;
	mark:contains [
		mark:contains [
			mark:contains [
				mark:contains [
					mark:header \\"# Charlie\\" ;
					mark:text \\"Charlie is a good guy. (age :: 56)\\" ;
				] ;
				mark:header \\"# Alice\\" ;
				mark:text \\"age :: 22\\" ;
			] ;
			mark:header \\"## Interests\\" ;
			mark:text \\"- Eating\\" ;
		] ;
		mark:header \\"# Bob (age :: 42)\\" ;
	] .

"
`;
